Fixed spacing issue - meetups & contributions

--- a/frontend/src/components/contribution/contribution.css
+++ b/frontend/src/components/contribution/contribution.css
@@ -1,17 +1,17 @@
 .ContributionComponents {
   display: block;
   margin: 65px 0 0 210px;
-  padding: 20px 20px;
   width: 70%;
   height: 50vh;
   background-color: #fff6ed;
   border: 3px solid #7a7d7d;
   border-radius: 10px;
   padding-bottom: 35px;
+  padding-top: 70px;
 }
 
 .contributionsData {
-  padding-top: 50px;
+  padding-top: 5px;
   display: inline-flex;
   flex-wrap: wrap;
   /* justify-content: space-around; */
