--- a/frontend/src/components/meetup/meetup.css
+++ b/frontend/src/components/meetup/meetup.css
@@ -1,18 +1,18 @@
 .MeetupComponents {
   display: block;
   margin: 65px 0 0 210px;
-  padding: 20px 20px;
   width: 70%;
   height: 50vh;
   background-color: #fff6ed;
   border: 3px solid #7a7d7d;
   border-radius: 10px;
   padding-bottom: 35px;
+  padding-top: 70px;
 }
 
 /* Data Input Styling */
 .meetupsData {
-  padding-top: 50px;
+  margin-top: 5px;
   display: inline-flex;
   flex-wrap: wrap;
   /* justify-content: space-around; */
